--- a/css/style.css
+++ b/css/style.css
@@ -165,17 +165,25 @@ body{
 }
 .header-bottom__list {
     height: 100%;
-    padding-left: .625rem;
-    padding-right: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.header-bottom__item:not(:last-child) {
-    margin-right: 1.25rem;
+.header-bottom__item{
+    height: 53px;
+}
+.header-bottom__item{
+    padding-right: 15px;
+}
+.header-bottom__item:nth-child(1){
+    padding-left: 15px;
 }
 .header-bottom__link {
     position: relative;
+    height: 100%;
+    display: flex;
+    align-items: center;
+
     transition: text-shadow 0.4s;
 }
 .header-bottom__link::after{
