--- a/css/style.css
+++ b/css/style.css
@@ -80,8 +80,6 @@ body{
     justify-content: space-between;
     align-items: center;
 }
-.menu {
-}
 .menu__list {
     display: flex;
     column-gap: 3.125rem;
@@ -92,10 +90,6 @@ body{
 .menu__item:hover{
     text-shadow: .0625rem .0625rem .1875rem rgba(0, 0, 0, 0.3);
     transition: all 0.4s;
-}
-.header-top__logo {
-}
-.logo__img {
 }
 .header-top__adress {
     font-weight: 700;
@@ -113,14 +107,7 @@ body{
     column-gap: .625rem;
     margin-right: 1.4375rem;
 }
-.header-top__favourites {
-}
-.favourites__icon {
-}
-.header-top__account {
-}
-.account__icon {
-}
+
 .header-top__cart {
     position: relative;
 }
@@ -134,12 +121,6 @@ body{
     border-radius: 50%;
     background-color: #1C62CD;
     z-index: 1;
-}
-.cart__icon {
-
-}
-.cart__icon::after{
-
 }
 .cart-number{
     position: absolute;
@@ -185,14 +166,167 @@ body{
     height: 100%;
     display: flex;
     align-items: center;
-
     transition: text-shadow 0.4s;
+}
+.header-top__burger-btn{
+    width: 33.6736px;
+    height: 27px;
+    border: none;
+    position: relative;
+    z-index: 30;
+    display: none;
+}
+.header-top__burger-btn span{
+    position: absolute;
+    width: 2.1046rem;
+    height: .1875rem;
+    border-radius: .125rem;
+    left: 0rem;
+    background-color: black;
+    transition: transform 0.5s;
+
+}
+.header-top__burger-btn span:nth-child(1){
+    transform: translateY(-0.625rem);
+}
+.header-top__burger-btn span:nth-child(3){
+    transform: translateY(.625rem);
+}
+.header.open .header-top__burger-btn span:nth-child(1){
+    transform: translateY(0) rotate(45deg);
+}
+.header.open .header-top__burger-btn span:nth-child(2){
+    opacity: 0;
+}
+.header.open .header-top__burger-btn span:nth-child(3){
+    transform: translateY(0) rotate(-45deg);
+}
+.burger-btn__additional{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 15;
+    background-color: white;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+.additional-menu__list{
+    width: 245px;
+    min-height: 100%;
+    box-shadow: 0rem 0rem 4px 0px rgba(0, 0, 0, 0.25);
+    overflow-y: auto;
+    padding-top: 55px;
+    padding-left: 10px;
+}
+.additional-menu__link{
+    display: block;
+    padding-top: 2.25rem;
+    position: relative;
+}
+.additional-menu__item:nth-child(1) a::before{
+    content: '';
+    display: inline-block;
+    background-image: url(../img/header/burger-menu/svg-user.svg);
+    width: 20px;
+    height: 20.0016px;
+    margin-right: 23px;
+}
+.additional-menu__item:nth-child(2) a::before{
+    content: '';
+    display: inline-block;
+    background-image: url(../img/header/burger-menu/svg-user.svg);
+    width: 20px;
+    height: 20.0016px;
+    margin-right: 23px;
+}
+.additional-menu__item:nth-child(3) a::before{
+    content: '';
+    display: inline-block;
+    background-image: url(../img/header/burger-menu/svg-love.svg);
+    width: 20px;
+    height: 18.3328px;
+    margin-right: 23px;
+}
+.additional-menu__item:nth-child(4) a::before{
+    content: '';
+    display: inline-block;
+    background-image: url(../img/header/burger-menu/svg-cart.svg);
+    width: 30px;
+    height: 22.5008px;
+    margin-right: 13px;
+}
+.additional-menu__item:nth-child(5) a::before{
+    content: '';
+    display: inline-block;
+    background-image: url(../img/header/burger-menu/svg-home.svg);
+    width: 18px;
+    height: 19.2px;
+    margin-right: 24px;
+}
+.additional-menu__item:nth-child(6) a::before{
+    content: '';
+    display: inline-block;
+    background-image: url(../img/header/burger-menu/svg-act.svg);
+    width: 1rem;
+    height: 1rem;
+    margin-right: 1.625rem;
+}
+.additional-menu__item:nth-child(7) a::before{
+    content: '';
+    display: inline-block;
+    background-image: url(../img/header/burger-menu/svg-xs.svg);
+    width: 1.1294rem;
+    height: .9375rem;
+    margin-right: 1.5rem;
+}
+.additional-menu__item:nth-child(8) a{
+    padding-left: 43px;
+}
+.additional-menu__item:nth-child(9) a{
+    padding-left: 43px;
+}
+.additional-menu__item:nth-child(10) a{
+    padding-left: 43px;
+}
+.additional-menu__item:nth-child(11) a{
+    padding-left: 43px;
+}
+.additional-menu__item:nth-child(12) a{
+    padding-left: 43px;
+}
+.additional-menu__item:nth-child(13) a{
+    padding-left: 43px;
+}
+.additional-menu__item:nth-child(14) a{
+    padding-left: 43px;
+}
+.additional-menu__item:nth-child(15) a{
+    padding-left: 43px;
+}
+.additional-menu__link::after{
+    content: '';
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    bottom: -0.1875rem;
+    width: 100%;
+    height: .125rem;
+    background-color: rgba(0, 0, 0, 0.10);
 }
 
 /* --------------------------section-hero------------------------------------------------- */
-.hero__container{
+.hero{
+    margin-bottom: 200px;
+}
+.hero__block-1{
     display: flex;
     column-gap: 36px;
+    max-width: 75rem;
+    padding: 0 .9375rem 0 .9375rem;
+    margin: 0 auto;
+
 }
 .swiper-container{
     min-height: 164px;
@@ -213,8 +347,8 @@ body{
     position: absolute;
     display: inline-block;
     background-image: url(../img/hero/стрелка\ влево.svg);
-    width: 15.182px;
-    height: 28.396px;   
+    width: 15.1824px;
+    height: 28.3968px;   
     top: 50%;
     left: 0;
     z-index: 2;
@@ -225,8 +359,8 @@ body{
     position: absolute;
     display: inline-block;
     background-image: url(../img/hero/стрелка\ вправо.svg);
-    width: 15.182px;
-    height: 28.396px;
+    width: 15.1824px;
+    height: 28.3968px;
     top: 50%;
     right: 0;
     z-index: 2;
@@ -248,106 +382,113 @@ body{
     background-color: #fff;
 }
 .card-action{
-}
-.card-action-top{
-    display: flex;
-    justify-content: space-between;
-}
-.card-action{
-    max-width: 16.5625rem;
-    border-radius: .1875rem;
-    border: 1px solid #CDCDCD;
-}
-.card-action__block-action{
-    width: 5.625rem;
-    height: 1.875rem;
-    background-color: #1C62CD; 
-}
-.block-action__text{
-    padding: .5rem 1.25rem;
-    color: #FFF;
-    font-family: Proxima Nova;
-    font-size: 12px;
-    font-weight: 700;
-    letter-spacing: .075rem;
-    text-transform: uppercase; 
-}
-.card-action__block-price {
     display: flex;
     flex-direction: column;
-    row-gap: .4375rem;
-    margin-right: .5rem;
+    min-width: 265px;
+    height: 397px;
+    border-radius: 3px;
+    border: 1px solid #CDCDCD;
 }
-.block-price__price-now {
+.card-action-top {
+    display: flex;
+    column-gap: 54px;
+}
+.block-title-action{
+    width: 5.625rem;
+    height: 1.875rem;
+    border-radius: .125rem;
+    background-color: #1C62CD;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.title-action {
+    color: #FFF;
+    font-family: Proxima Nova;
+    font-size: .75rem;
+    font-weight: 700;
+    letter-spacing: 1.2px;
+    text-transform: uppercase;
+}
+.card-action-price {
+    display: flex;
+    flex-direction: column;
+    row-gap: 7px;
+}
+.new-price {
     color: #1C62CD;
     font-family: Barlow;
-    font-size: 1.6875rem;
+    font-size: 27px;
     font-weight: 700;
 }
-.block-price__price-now::after{
+.new-price::after{
     content: '';
     background-image: url(../img/hero/icon-rubl.svg);
     display: inline-block;
-    width: .9375rem;
+    width: 1rem;
     height: 1.1248rem;
+    margin-left: .2813rem;
 }
-.block-price__previous-price {
+.alt-price {
     color: #C4C4C4;
     font-family: Barlow;
-    font-size: .875rem;
+    font-size: 14px;
     font-weight: 400;
     position: relative;
     align-self: flex-end;
 }
-.block-price__previous-price::after{
+.alt-price::after{
     content: '';
-    display: inline-block;
     background-image: url(../img/hero/icon-rubl-ser.svg);
+    display: inline-block;
     width: .5rem;
     height: .5838rem;
+    margin-left: .1875rem;
 }
-.block-price__previous-price::before{
+.alt-price::before{
     content: '';
     position: absolute;
-    bottom: .375rem;
     left: 0;
+    bottom: .375rem;
     width: 60px;
-    height: .0625rem;
+    height: 1px;
     background-color: #C4C4C4;
-    transform: rotate(-8.332deg);
+    transform: rotate(-9.332deg);
 
 }
 .card-action-img{
-    text-align: center;
-    padding-top: .625rem;
+    margin-top: .4375rem;
+    margin-left: 3.8125rem;
 }
-.card-action__block-title{
-    width: 14.5489rem;
-    margin: 0 auto;
-    padding-top: .3125rem;
+.motor-title {
+    margin-top: 4.2992px;
+    margin-bottom: .4375rem;
 }
-.block-title__title{
+.title-motor-card {
+    color: #2F3035;
     text-align: center;
+    font-family: SF Pro Display;
     font-size: 1.125rem;
     font-weight: 700;
 }
-.card-action-time{
+.card-action-bottom {
+    height: 100%;
+    border-radius: .125rem;
     background-color: #F0F0F4;
-    margin-top: .4375rem;
-    height: 6.1875rem;
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
-.card-action-time__text{
-    padding: 1.5625rem 1.5625rem;
+.action-bottom-text {
     text-align: center;
-    
 }
-.text__time{
-    font-size: 18px;
-}
-.text__time-blue{
+.data-text{
     color: #1C62CD;
+    text-align: center;
     font-family: Barlow;
+    font-size: 1.125rem;
     font-weight: 700;
 }
 /* ---------------------------------header-media-------------------------- */
@@ -412,22 +553,77 @@ body{
         -0.0437rem 0 rgba(0, 0, 0, 0.2),
         0 -0.0437rem rgba(0, 0, 0, 0.2);
     }
+    .logo__img{
+        display: inline-block;
+    }
+    .logo__img-small{
+        display: none;
+    }
   }
+@media (max-width: 768px){
+    .menu{
+        display: none;
+    }
+    .header-top__logo{
+        width: 82px;
+        height: 17.6px;
+    }
+    .logo__img{
+        display: none;
+    }
+    .logo__img-small{
+        display: inline-block;
+    }
+    .header-top__adress{
+        display: none;
+    }
+    .header-top {
+        height: 67px;
+    }
+    .header.open .burger-btn__additional {
+        display: flex;
+    }
+    .header-top__burger-btn{
+        display: block;
+    }
+}
+
 /* ---------------------------------section-hero-------------------------- */
 @media (max-width: 71.87em){
-    .hero__container{
+    .hero__block-1{
         column-gap: 20px;
     }
 }
 @media (max-width: 64em){
-    .hero__container{
+    .hero__block-1{
         display: flex;
         flex-direction: column;
         row-gap: 40px;
+    }
+    .card-action-top {
+        display: flex;
+        justify-content: space-between;
+    }
+    .card-action-img{
+        margin-top: .4375rem;
+        margin-left: 0rem;
+        text-align: center;
+    }
+    .card-action{
+        margin: 0 1.625rem;
     }
     .slide-img img{
         min-width: 320px;
         min-height: 164px;
         object-fit: cover;
+    }
+}
+@media (max-width: 48em){
+    .hero__block-1{
+        display: flex;
+        column-gap: 36px;
+        max-width: 73.125rem;
+        padding: 0 0rem 0 0rem;
+        margin: 0 auto;
     }
 }
