--- a/css/style.css
+++ b/css/style.css
@@ -542,6 +542,7 @@ body{
     border-radius: .1875rem;
     background-color: #F0F0F4;
     transform: translate3d(0,0,0);
+    font-size: 16px;
 }
 .btn-search{
     padding: 1.0625rem 2.5rem;
