--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,12 @@ button{
     font-size: inherit;
     line-height: inherit;
 }
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button, 
+input[type="search"]::-webkit-search-results-button, 
+input[type="search"]::-webkit-search-results-decoration {
+  -webkit-appearance:none;
+}
 /* ----------------------------------------------------------- */
 body{
     font-family: 'SF Pro Display', sans-serif;
